cabal-version:      3.0
name:               traderjoes
version:            0.1.0.0
build-type:         Simple
data-files:         *.graphql, *.css, *.sql

common warnings
  ghc-options: -Wall

executable traderjoes
  import:           warnings
  main-is:          Main.hs
  other-modules:    Prices
  build-depends:    base ^>=4.17.2.1,
                    aeson,
                    blaze-html,
                    blaze-markup,
                    bytestring,
                    directory,
                    file-embed,
                    http-conduit,
                    sqlite-simple,
                    time
  default-language: GHC2021
